--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./sass/style.css" />
-    <title>Document</title>
+    <title>Russkiy Pub</title>
   </head>
   <body>
     <div class="all-menu">
